--- a/app/src/main/res/layout/zhanghu_chongzhi_act.xml
+++ b/app/src/main/res/layout/zhanghu_chongzhi_act.xml
@@ -34,7 +34,7 @@
             android:gravity="center_vertical"
             android:textSize="14sp"
             app:solidColor="@color/gray_bg"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:imeOptions="actionNext"
             android:hint="请输入充值金额"
             android:layout_margin="10dp"
